Fix overflow at top

--- a/css/kitty.css
+++ b/css/kitty.css
@@ -40,6 +40,7 @@ button {
   width: 100%;
   position: absolute;
   height: 100%;
+  margin-top: -50px;
 }
 
 #resetGame.active {
